--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>More About HTML</title>
 </head>
 <body>
-    
+    <h2>Audio-Vedio</h2>
+    <audio controls src="assets/Goat-bleat-sound.mp3">Music</audio>
+    <video controls src="assets/video.mp4"width="700px" height="300px">ok</video>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/08RJq-Hwr5I?si=XzFpKs16YPX0pYo8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
