--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>More About HTML</title>
+    <title>More About HTML</title> 
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
+    <header>
+        <nav>
+         <ul>
+             <li><a href="table.html" target="_blank">Table</a></li>
+             <li><a href="blog.html" target="_blank">Blogs</a></li>
+             <li><a href="form.html" target="_blank">Form</a></li>
+             <li><a href="index.html" target="_blank">Video</a></li>
+         </ul>
+        </nav>
+ 
+ 
+     </header>
     <h2>Audio-Vedio</h2>
     <audio controls src="assets/Goat-bleat-sound.mp3">Music</audio>
     <video controls src="assets/video.mp4"width="700px" height="300px">ok</video>
