--- a/blog.html
+++ b/blog.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blogs</title>
     <link rel="stylesheet" href="emni.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
     <header>
-<nav>
-    <ul>
-        <li> <a href="index.html" target="_blank" >Home</a></li>
-        <li><a href="blogs.html" target="_blank">Blog</a></li>
-        <li><a href="about.html" target="_blank">About</a></li>
-    </ul>
-</nav>
-    </header>
+        <nav>
+         <ul>
+            <li><a href="blog.html" target="_blank">Blogs</a></li>
+             <li><a href="index.html" target="_blank">Video</a></li>
+             <li><a href="table.html" target="_blank">Table</a></li>
+             <li><a href="form.html" target="_blank">Form</a></li>
+         </ul>
+        </nav>
+ 
+ 
+     </header>
     <main>
 <article>
     <header>
