--- a/form.html
+++ b/form.html
@@ -5,11 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pithar Dukan</title>
     <link rel="stylesheet" href="form_design.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
 
     <header>
-
+        <header>
+            <nav>
+             <ul>
+                 <li><a href="index.html" target="_blank">Video</a></li>
+                 <li><a href="blog.html" target="_blank">Blogs</a></li>
+                 <li><a href="table.html" target="_blank">Table</a></li>
+                 <li><a href="form.html" target="_blank">Form</a></li>
+             </ul>
+            </nav>
+     
+     
+         </header>
     </header>
 
     <main>
